@@ -805,7 +805,8 @@ void VisualizeUniformity::storeCanvasHistoSegmented(TFile * file_InputRootFile, 
     
     //Round fMaxBinVal to the nearest power of ten
     //------------------------------------------------------
-    fMaxBinVal = Uniformity::ceilPowerTen(fMaxBinVal, 0);
+    //fMaxBinVal = Uniformity::ceilPowerTen(fMaxBinVal, 0);
+    fMaxBinVal = Uniformity::ceilPowerTen(fMaxBinVal, 1, 0);
     
     //Loop Over the detector's Eta Sectors to make the TCanvas
     //------------------------------------------------------
